--- a/_config.yml
+++ b/_config.yml
@@ -187,7 +187,7 @@ collections:
     output: false
     permalink: /:collection/:title/
   projects:
-    output: true
+    output: false
     permalink: /:collection/:title/
 
 announcements:
